<resources>
    <string name="app_name">CogniChamp Driver</string>
    <string name="facebook_app_id">334720800365423</string>
    <string name="fb_login_protocol_scheme">fb334720800365423</string>

    <string name="enter_mobile_number">mobile</string>
    <string name="password_hint">email</string>
    <string name="register">Register</string>
    <string name="login">LogIn</string>
    <string name="name_hint">Name</string>
    <string name="address_hint">Address</string>
    <string name="email_hint">Email</string>
    <string name="alternate_phone_hint">Alternate Mobile</string>
    <string name="landline_hint">Landline</string>
    <string name="field1_hint">Alphanumeric Field</string>
    <string name="image_upload">Upload Image</string>
    <string name="save">Save</string>
    <string name="std_code">STD Code</string>
    <string name="image_dimension">170 * 170 pixels</string>
    <string name="log_in_choice">Or LogIn</string>
    <string name="register_choice">Or Register</string>
    <string name="loading">Loading&#8230;</string>
    <string name="first_list">Add your first list</string>
    <string name="new_list">New list&#8230;</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ping_history">Ping History</string>
    <string name="profile">Profile</string>
    <string name="car_details">Car Details</string>
    <string name="driving_licence">Driving License Number</string>
    <string name="voter_id">Voter ID Number</string>
    <string name="personal_details">Personal Details</string>
    <string name="driver_image">Driver Image</string>
    <string name="no_image_chosen">No Image Chosen</string>
    <string name="car_image_front">Car Front</string>
    <string name="car_image_back">Car Back</string>
    <string name="car_number_plate">Number Plate</string>
    <string name="driver_voter_image">Voter ID Image</string>
    <string name="driver_licence_image">Driving License Image</string>
    <string name="uploading">Uploading&#8230;</string>
    <string name="uploaded">Uploaded</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string-array name="india_states">
        <item>Select State</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string name="title_activity_view_tabbed_profile">ViewTabbedProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_view_tabbed">ViewTabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_history">Notification history</string>
    <string name="log_out">Log out</string>
    <string name="basic">basic</string>
    <string name="other">other</string>
    <string name="vehicle">vehicle</string>
    <string name="all_lists">Trip Lists</string>
    <string name="is_editing">isEditing</string>
    <string name="add_user">Add User</string>
    <string name="start_trip">Start Trip</string>
    <string name="only_editing">onlyEditing</string>
    <string name="list_id">listId</string>
    <string name="list_name">listName</string>
    <string name="end_trip">End Trip</string>
    <string name="title_activity_profile_address">ProfileAddressActivity</string>
    <string name="image_selected">Image Selected</string>
    <string name="back_voter_filename">backVoterId.jpg</string>
    <string name="back_licence_filename">backLicence.jpg</string>
    <string name="driving_licence_back_image">Driving License Back Image</string>
    <string name="car_side">carSide.jpg</string>
    <string name="profile_status">profileStatus</string>
    <string name="reset_password">Reset Password</string>
    <string name="list_name_space">List Name</string>
    <string name="city_village">City/Village</string>
    <string name="car">Car</string>
    <string name="local_trip_running">localTripRunning</string>
    <string name="local_users_json">localUsersJSON</string>
    <string name="change_list_name">Change list name</string>
    <string name="delete_list">Delete list</string>
    <string name="empty_dash">-----</string>
</resources>
